test(gates): integration gates 2/3 pass end-to-end; three open questions settled
Ran by the captain on the CMake-built natives/windows-x64/cava.dll:

  native/tests/build-mingw.ps1  -> 67 passed / 0 failed, for c++17, c++20 and CAVA_SAFE=1
  cmake --build build/native-captain && ctest -C Release -> 3/3 passed
  cava.ffm.NativeSelfTest        -> status=OPEN, java_layout_sum == native_layout_sum
                                    == 0x6149FD30, SELF-TEST: PASS
  NativeSelfTest disabled        -> DISABLED_BY_FLAG, INFO not ERROR, exit 0
  NativeSelfTest with missing lib-> RESOURCE_MISSING, exit 0
  tools/LayoutGuardProbe         -> every guard as expected:
      abi=1 sum=correct -> OK + idempotent close + forged handle rejected
      abi=1 sum=wrong   -> CAVA_ERR_LAYOUT, handle=0
      abi=2/99/0        -> CAVA_ERR_ABI_VERSION, handle=0
      byte-wise sum     -> CAVA_ERR_LAYOUT (variant is dead)
  So a layout drift can never reach a native call: cava_open rejects it before
  any handle exists, and Java falls back to pure Java.

Decisions recorded so the streams stop negotiating:
1. The canonical layout_hash is the per-field 4-step u32 form, sum 0x6149FD30.
   The byte-wise variant is retired and the ABI version guard is authoritative
   (verified by the probe above). Header comment corrected to match.
2. Linker.defaultLookup() cannot see a System.load()-ed DLL on this machine, so
   every new native call must go through the existing CavaBindings lookup path.
3. The golden-trace world hash is a FIXED scan box (radius via
   -Dcava.parity.world.radius, default 8, three dimensions, empty sections
   skipped) instead of "all loaded chunks", because 1.20.4 Yarn exposes no public
   enumeration and the loaded set jitters into false diffs.

Also recorded for the toolbox: PowerShell 5.1 mangles -Dkey=value and a native
-cp argument, so JVM properties go through JAVA_TOOL_OPTIONS and javac arguments
through a UTF-8 @argfile (an ASCII argfile silently turns the non-ASCII prof